--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
             </h1>
             <div id="portfolio-container">
                 <div class="portfolio-image">
-                    <img src="/image1.jpeg" alt="">
+                    <img src="/Screen shot 1.png" alt="">
                     <div class="portfolio-details">
                         <p>I have designed and developed a responsive portfolio webpage using HTML and CSS, ensuring a
                             seamless user experience across devices. The webpage has been successfully deployed on
@@ -254,7 +254,7 @@
                     </div>
                 </div>
                 <div class="portfolio-image">
-                    <img src="/image1.jpeg" alt="">
+                    <img src="/Screen shot 2.png" alt="">
                     <div class="portfolio-details">
                         <p>I have developed a feature-rich music player using HTML, and CSS, providing an
                             engaging and interactive user experience. The music player has been successfully deployed on
